Day 5 part one complete - still a bug in part 2 and really could use cleaning